--- a/datarail/templates/create_post.html
+++ b/datarail/templates/create_post.html
@@ -1,5 +1,52 @@
 {%extends 'layout.html' %}
 {%block content%}
 
+<!-- Form section start -->
+<div class="content-section">
+    <form action="" method="POST" class="row g-3 needs-validation" novalidate>
+        {{form.hidden_tag()}}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">New Post</legend>
+
+
+            <div class="form-group mb-3">
+                {{form.title.label(class="form-control-label")}}
+                <!-- showing user errors in form -->
+                {% if form.title.errors %}
+                {{form.title(class="form-control form-control-lg is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.title.errors %}
+                    <span>{{error}}</span>
+                    {% endfor %}
+                </div>
+                {%else%}
+                {{form.title(class="form-control form-control-lg")}}
+                {%endif%}
+            </div>
+
+            <div class="form-group mb-3">
+                {{form.content.label (class="form-control-label")}}
+                <!-- showing user errors in form -->
+                {% if form.content.errors %}
+                {{form.content (class="form-control form-control-lg is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.content.errors %}
+                    <span>{{error}}</span>
+                    {% endfor %}
+                </div>
+                {%else%}
+                {{form.content (class="form-control form-control-lg")}}
+                {%endif%}
+            </div>
+
+        </fieldset>
+        <div class="'form-group">
+            {{form.submit(class="btn btn-outline-info")}}
+        </div>
+
+    </form>
+</div>
+
+<!-- Form section end -->
 
 {%endblock content%}
