--- a/datarail/templates/home.html
+++ b/datarail/templates/home.html
@@ -6,6 +6,7 @@
 
     <!-- Using styling to make the posts cleaner and look better -->
     <article class="media content-section">
+        <img class="rounded-image article-img" src="{{ url_for('static', filename=f'profile_pics/{post.author.image_file}')}}" alt="profile picture">
         <div class="media-body">
             <div class="article-metadata">
                 <a class="mr-2" href="#">{{ post.author }}</a>
