--- a/datarail/templates/post.html
+++ b/datarail/templates/post.html
@@ -11,8 +11,10 @@
             <a class="mr-2" href="#">{{ post.author.username }}</a>
             <small class="text-muted">{{ post.date_posted.strftime('%m/%d/%Y') }}</small>
             {% if post.author == current_user %}
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('edit_post', post_id=post.id)}}">Update Post</a>
-            <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
+            <div>
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('edit_post', post_id=post.id)}}">Update Post</a>
+                <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
+            </div>
             {% endif %}
         </div>
         <h2>{{ post.title }}</h2>
@@ -28,12 +30,12 @@
                 <h5 class="modal-title" id="deleteModalLabel">Are you sure you want to delete?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                ...
-            </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <!-- Send the delete request to our route.  -->
+                <form action="{{url_for('delete_post', post_id=post.id)}}" method="POST">
+                    <input class="btn btn-danger" type="submit" name="Delete" value="Delete">
+                </form>
             </div>
         </div>
     </div>
