--- a/datarail/templates/home.html
+++ b/datarail/templates/home.html
@@ -2,7 +2,7 @@
 
 {%block content%} 
     <!-- using the Jinja templating engine -->
-    {%for post in posts%}
+    {%for post in posts.items %}
 
     <!-- Using styling to make the posts cleaner and look better -->
     <article class="media content-section">
@@ -18,5 +18,18 @@
     </article>
     
     {%endfor%}
+
+        {% for page_num in posts.iter_pages(left_edge=1, left_current=1, right_edge=1, right_current=2) %}
+        {% if page_num %}
+            {% if posts.page == page_num %}
+                <a class="btn btn-info mb-4" href="{{url_for('home', page=page_num)}}">{{page_num}}</a>
+            {% else %}
+                <a class="btn btn-outline-info mb-4" href="{{url_for('home', page=page_num)}}">{{page_num}}</a>
+            
+            {% endif %}
+        {% else %}
+            ...
+        {% endif %}
+    {% endfor %}
 
 {%endblock content%}
